2007-08-14 23:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSController.h: Added new ivar.
	* Headers/AppKit/NSObjectController.h: Added new ivar.
	* Source/GNUmakefile: Added NSManagedObjectContext.[hm].
	* Source/NSController.m: Add keys for nib encoding/decoding.
	* Source/NSObjectController.m: Add keys for nib encoding/decoding.

2007-08-15 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h (-setShadow::),
	* Source/GSDisplayServer.m (-setShadow::): 
	Add new method for shadow.

2007-08-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-_substituteFontWithName:font:):
	Let the font manager handle the font convertion.
	* Source/NSPrintOperation.m (_print): Don't adjust page when page
	range is known.
	
2007-08-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-fixFontAttributeInRange:): 
	First attempt at font attribute fixing.

2007-08-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSFont.h: Add MacOSX 10.4 methods and constants.
	* Source/NSFont.m: Add MacOSX 10.4 methods. Remove
	NSFontDescriptor code. 
	* Source/NSFont.m (+initialize): Read in preferred fonts from user defaults.
	* Headers/AppKit/NSFontDescriptor.h: Clean up includes.
	* Source/NSFontDescriptor.m: New file, split out from NSFont.m.
	* Source/externs.m: Moved NSFontDescriptor strings to here.
	* GNUMakefile: Add NSFontDescriptor.m

2007-08-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSScreen.h: Add method userSpaceScaleFactor.
	* Source/NSScreen.m: Implement userSpaceScaleFactor. Correct
	mainScreen. Listen to NSApplicationDidChangeScreenParametersNotification.
	Get default menu height from NSMenuView. General cleanup.
	
2007-08-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButtonCell.m (-initWithCoder:),
	* Source/NSMenuItem.m (-initWithCoder:): Adopt to changed values
	for _keyEquivalentModifierMask. These have changed through the
	NSEvent.h change.
